--- a/BirchCoin/app/src/main/res/layout/content_main.xml
+++ b/BirchCoin/app/src/main/res/layout/content_main.xml
@@ -15,15 +15,44 @@
             android:layout_marginBottom="37dp"
             android:alpha="0.3"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your Step Counter:"
+            android:text="Please login"
             android:id="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="156dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            android:layout_marginBottom="328dp"/>
+            android:layout_marginBottom="328dp" android:visibility="visible"/>
+    <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="54dp" android:id="@+id/textInputLayout3" android:layout_marginBottom="344dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
+
+        <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="password" android:id="@+id/passLogin" android:inputType="textPassword"
+                android:layout_weight="2" android:visibility="visible" android:singleLine="true"
+        />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.641" android:id="@+id/textInputLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginBottom="224dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
+
+        <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="email" android:id="@+id/emailLogin" android:inputType="textEmailAddress"/>
+    </android.support.design.widget.TextInputLayout>
 
 </android.support.constraint.ConstraintLayout>
