--- a/BirchCoin/app/src/main/res/layout/activity_main.xml
+++ b/BirchCoin/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/design_default_color_primary_dark"
-                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay" app:title="BirchCoin"/>
 
     </android.support.design.widget.AppBarLayout>
 
