--- a/BirchCoin/app/src/main/res/layout/content_main.xml
+++ b/BirchCoin/app/src/main/res/layout/content_main.xml
@@ -12,9 +12,9 @@
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp" app:srcCompat="@drawable/bg" android:id="@+id/imageView3"
-            android:layout_marginBottom="37dp"
+            android:layout_marginBottom="225dp"
             android:alpha="0.3"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
@@ -24,15 +24,15 @@
             android:id="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="156dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
+            android:layout_marginEnd="168dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"
             android:layout_marginBottom="328dp" android:visibility="visible"/>
     <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
-            android:layout_height="54dp" android:id="@+id/textInputLayout3" android:layout_marginBottom="344dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+            android:layout_height="381dp" android:id="@+id/textInputLayout3"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="9dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="9dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="9dp">
 
         <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
@@ -43,16 +43,33 @@
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.641" android:id="@+id/textInputLayout2"
+            app:layout_constraintVertical_bias="1.0" android:id="@+id/textInputLayout2"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginBottom="224dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0" android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
         <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="email" android:id="@+id/emailLogin" android:inputType="textEmailAddress"/>
     </android.support.design.widget.TextInputLayout>
+    <Button
+            android:text="Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="7dp"
+            android:layout_marginBottom="111dp"
+            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"/>
+    <Button
+            android:text="Register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button2"
+            app:layout_constraintTop_toTopOf="@+id/button"
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
+            android:layout_marginStart="7dp" app:layout_constraintBottom_toBottomOf="@+id/button"/>
 
 </android.support.constraint.ConstraintLayout>
