added progress bar implmentation

--- a/BirchCoin/app/src/main/res/layout/activity_main.xml
+++ b/BirchCoin/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:theme="?attr/actionBarTheme"
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar" app:title="BirchCoin"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="548dp"
+            app:layout_constraintBottom_toTopOf="@+id/progressBar"/>
     <TextView
             android:id="@+id/stepsLbl"
             android:layout_width="wrap_content"
@@ -46,4 +47,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stepsLbl"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/progressBar"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginBottom="93dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="43dp" android:layout_marginEnd="43dp"/>
 </android.support.constraint.ConstraintLayout>
