Added ads engine

--- a/BirchCoin/app/src/main/res/layout/activity_main.xml
+++ b/BirchCoin/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar" app:title="BirchCoin"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="548dp"
-            app:layout_constraintBottom_toTopOf="@+id/progressBar"/>
+            app:layout_constraintBottom_toTopOf="@+id/progressBar" app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:id="@+id/stepsLbl"
             android:layout_width="wrap_content"
@@ -56,4 +56,19 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="43dp" android:layout_marginEnd="43dp"/>
+    <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" ads:layout_constraintTop_toTopOf="parent"
+            ads:layout_constraintStart_toStartOf="parent"
+            ads:layout_constraintHorizontal_bias="0.542"
+            ads:layout_constraintVertical_bias="0.988" ads:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
+            ads:layout_constraintEnd_toEndOf="@+id/toolbar">
+    </com.google.android.gms.ads.AdView>
 </android.support.constraint.ConstraintLayout>
