--- a/BirchCoin/app/src/main/res/layout/activity_main.xml
+++ b/BirchCoin/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,8 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginBottom="93dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="43dp" android:layout_marginEnd="43dp"/>
+            android:layout_marginStart="43dp" android:layout_marginEnd="43dp" android:max="1000" android:min="0"
+            android:progressTint="#2196F3"/>
     <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
@@ -71,4 +72,10 @@
             android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
             ads:layout_constraintEnd_toEndOf="@+id/toolbar">
     </com.google.android.gms.ads.AdView>
+    <Button
+            android:text="Reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button3"
+            app:layout_constraintTop_toTopOf="@+id/toolbar" app:layout_constraintStart_toStartOf="@+id/toolbar"
+            android:layout_marginTop="492dp" android:layout_marginStart="160dp"/>
 </android.support.constraint.ConstraintLayout>
