--- a/BirchCoin/app/src/main/res/layout/activity_main.xml
+++ b/BirchCoin/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
             ads:layout_constraintEnd_toEndOf="@+id/toolbar">
     </com.google.android.gms.ads.AdView>
     <Button
-            android:text="Reset"
+            android:text="Logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button3"
             app:layout_constraintTop_toTopOf="@+id/toolbar" app:layout_constraintStart_toStartOf="@+id/toolbar"
